test/reject/22-interface-final-method.puml
@startuml

interface interface{
    {final} int myMethod()
}

@enduml